--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
+$black: #000000;
+$ocean-blue-pearl: #4733d480;
+$white: #fffffff2;
+$white-2: #ffffff;
+$font-size-l: 16px;
+$font-size-m: 14px;
+$font-family-modern_antiqua: 'Modern Antiqua', Helvetica;
+$font-family-source_code_pro: 'Source Code Pro', Helvetica;
+
+@import url('https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css');
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:600|Modern+Antiqua:400');
+/* The following line is used to measure usage of this code in production. For more info see our usage billing page */
+@import url('https://px.animaapp.com/635ee455c0debefd1633582e.635ee4568edcac453b0a1ecf.1ZVJ7LC.rsp.png');
+
+.screen a {
+  display: contents;
+  text-decoration: none;
+}
+.container-center-horizontal {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  pointer-events: none;
+  width: 100%;
+}
+.container-center-horizontal > * {
+  flex-shrink: 0;
+  pointer-events: auto;
+}
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
