--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,8 @@ $font-family-source_code_pro: 'Source Code Pro', Helvetica;
 }
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
