--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,4 +1,4 @@
-/* @import '../../index.css'; */
+@import '../../index.scss';
 
 .home-desktop {
   align-items: flex-start;
@@ -100,9 +100,9 @@
 }
 
 .c-2022-no-bull-cinema {
-  /* color: $white-2; */
-  /* font-family: $font-family-modern_antiqua; */
-  /* font-size: $font-size-l; */
+  color: $white-2; 
+  font-family: $font-family-modern_antiqua;
+  font-size: $font-size-l;
   font-weight: 400;
   height: 13px;
   letter-spacing: 0;
