--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -1,44 +1,79 @@
 @import '../../index.scss';
 
-.button {
-  align-items: center;
-  border: 1px none;
-  box-shadow: 0px 4px 22px #ffffff;
-  cursor: pointer;
+// .button {
+//   align-items: center;
+//   border: 1px none;
+//   box-shadow: 0px 4px 22px #ffffff;
+//   cursor: pointer;
+//   display: flex;
+//   height: 50px;
+//   justify-content: center;
+//   padding: 2px;
+//   transition: all 0.2s linear;
+//   width: 82px;
+//   margin-right: 50px;
+
+//   &:hover {
+//     transform: scale(1.1);
+//   }
+
+//   .button__inner {
+//     align-items: center;
+//     background-color: $ocean-blue-pearl;
+//     border: 2px solid;
+//     border-color: $white-2;
+//     box-shadow: -4px 4px 0px #000000;
+//     display: flex;
+//     gap: 10px;
+//     justify-content: center;
+//     padding: 16px 18px;
+//     width: fit-content;
+//   }
+
+//   .text {
+//     color: #ffffff;
+//     font-family: $font-family-source_code_pro;
+//     font-size: $font-size-m;
+//     font-weight: 600;
+//     letter-spacing: 0;
+//     line-height: 14px;
+//     margin-top: -2px;
+//     text-shadow: 0px 4px 4px #00000080;
+//     white-space: nowrap;
+//     width: fit-content;
+//   }
+// }
+
+
+.link { 
+     color: #ffffff;
+     align-items: center;
+      font-family: $font-family-source_code_pro;
+      font-size: 24px;
+      font-weight: 600;
+      letter-spacing: 0;
+      margin-top: -2px;
+      text-shadow: 0px 4px 4px #00000080;
+      white-space: nowrap;
+      text-decoration: none;
+      padding: 22px 30px;
+}
+
+.wrapper {
+  border: 3px solid #040299;
   display: flex;
-  height: 50px;
   justify-content: center;
-  padding: 2px;
-  transition: all 0.2s linear;
-  width: 82px;
+  align-items: center;
+  margin: 20px 20px;
+  background-color: #4934d473;
+  box-shadow: 0px 20px 30px;
+  transition: ease-in-out 0.5s;
 
   &:hover {
-    transform: scale(1.1);
+    border: 3px solid white;
+    box-shadow: 0px 0px 60px white;
+    
   }
 
-  .button__inner {
-    align-items: center;
-    background-color: $ocean-blue-pearl;
-    border: 2px solid;
-    border-color: $white-2;
-    box-shadow: -4px 4px 0px #000000;
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    padding: 16px 18px;
-    width: fit-content;
-  }
 
-  .text {
-    color: #ffffff;
-    font-family: $font-family-source_code_pro;
-    font-size: $font-size-m;
-    font-weight: 600;
-    letter-spacing: 0;
-    line-height: 14px;
-    margin-top: -2px;
-    text-shadow: 0px 4px 4px #00000080;
-    white-space: nowrap;
-    width: fit-content;
-  }
 }
